# FastAPI-Basic-Setup

./: .gitignore  docker-compose.yml  donuts_backup.sql  pyproject.toml
fastapi-application/: .env-template  alembic.ini  main.py  pyproject.toml
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2024_06_04_0119-c08090a33bee_create_donuts_table.py  2024_06_04_1424-c0f21a834493_create_donuts_table.py  2024_06_04_1431-9fcc7894aa6f_create_donuts_table.py  e47d0387df51_donut_migration.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  api_v1_donuts.py  users.py
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  base.py  db_helper.py  user.py
fastapi-application/core/schemas/: schemas_donut.py
fastapi-application/crud/: donuts_crud.py  users.py
fastapi-application/utils/: case_converter.py
